--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
-
 project(libmb)
 
-include_directories(./include)
-
-set(CMAKE_PROJECT_VERSION 0.1)
 set(CMAKE_CXX_STANDARD 17)
+
 add_library(libmb src/error.cpp include/mb/error.h include/mb/int.h include/mb/result.h tests/result_test.cpp)
+target_include_directories(libmb PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
