--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(libmb)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(libmb src/error.cpp include/mb/error.h include/mb/int.h include/mb/result.h tests/result_test.cpp)
+add_library(libmb src/error.cpp include/mb/error.h include/mb/int.h include/mb/result.h)
 target_include_directories(libmb PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
