--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 find_package(GTest REQUIRED)
 
-add_executable(mb_test result_test.cpp view_test.cpp vector_test.cpp)
+add_executable(mb_test result_test.cpp view_test.cpp vector_test.cpp enum_test.cpp)
 target_link_libraries(mb_test LINK_PUBLIC libmb gtest gtest_main)
